--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Tommy Danielsson | Man you want but might not need!</title>
 </head>
 <body>
-  <!-- Section presentation -->
+  <!-- Section Presentation -->
   <section class="presentation" style="background-image: url('img/nerd-profile.jpg')">
       <div class="presentation__content">
         <h1 class="presentation__content__intro">The man your looking for?</h1>
@@ -25,11 +25,36 @@
       <h5><a href="http://resultify.se">Picture is from my old work (IQQ)</a></h5>
     </div>
   </section>
-
-  <!-- Section presentation -->
+  <!-- Section Story -->
+  <section id="story" class="story">
+    <h2 class="headline">Story time</h2>
+    <div class="center center-medium center-large">
+      <div class="card full no-link">
+        <div class="card__top">
+          <img src="img/true-profile.jpg" alt="my true form!">
+        </div>
+        <div class="content">
+          <h3>In the beginning!</h3>
+          <p>There was a fragile developer called <b>Tommy Danielsson</b></p>
+          <p>At the age of 3X, his quest is to find a place of his called a JOB</p>
+          <p>
+            He has a lovely relationship with certain CMS called WordPress.
+            And thanks to the relationship, he gain more knowlegde of the code language called <span class="italic">PHP</span>.
+          </p>
+          <ul>The language he can understand today is:
+            <li>HTML5</li>
+            <li>CSS 3</li>
+            <li>jQuery</li>
+            <li>MySQL</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Section Experience -->
   <section id="experience" class="experience">
     <h2 class="headline">Experience</h2>
-    <div class="center center-large col-2">
+    <div class="center-small center-medium center-large col-2">
       <a id="1" href="http://foocafe.org/malmoe" target="_blank" class="card">
         <div class="card__top">
           <span class="date">2015 - On going</span><span class="title">Volunteer</span>
@@ -39,7 +64,7 @@
           <p>
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
             Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
-            <span class="link-arrow">link-arrow</span>
+            <span class="link-arrow">&#8883;</span>
           </p>
         </div>
       </a>
@@ -52,7 +77,7 @@
           <p>
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
             Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
-            <span class="link-arrow">link-arrow</span>
+            <span class="link-arrow">&#8883;</span>
           </p>
         </div>
       </a>
@@ -65,7 +90,7 @@
           <p>
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
             Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
-            <span class="link-arrow">link-arrow</span>
+            <span class="link-arrow">&#8883;</span>
           </p>
         </div>
       </a>
@@ -78,7 +103,7 @@
           <p>
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
             Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
-            <span class="link-arrow">link-arrow</span>
+            <span class="link-arrow">&#8883;</span>
           </p>
         </div>
       </a>
@@ -91,11 +116,11 @@
           <p>
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
             Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
-            <span class="link-arrow">link-arrow</span>
+            <span class="link-arrow">&#8883;</span>
           </p>
         </div>
       </a>
-      <div class="card">
+      <div id="6" class="card no-link">
         <div class="card__top">
           <span class="date">2013 - 2014</span><span class="title">Web developer</span>
         </div>
@@ -107,7 +132,7 @@
           </p>
         </div>
       </div>
-      <div id="7" class="card">
+      <div id="7" class="card no-link">
         <div class="card__top">
           <span class="date">2013 - 2014</span><span class="title">Teacher</span>
         </div>
@@ -121,9 +146,10 @@
       </div>
     </div>
   </section>
-  <section class="schools center center-large">
+  <!-- Section Schools -->
+  <section id="schools" class="center center-medium center-large">
     <h2 class="headline">Schools</h2>
-    <div class="card full">
+    <div class="card full no-link">
       <div class="card__top">
           <span class="date">2012 - 2012</span><span class="title">Oratory course</span>
         </div>
@@ -136,7 +162,7 @@
         </div>
       </div>
     </div>
-    <div class="card full">
+    <div class="card full no-link">
         <div class="card__top">
             <span class="date">2010 - 2012</span><span class="title">Agile web developer</span>
           </div>
