--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <html class="ie"><![endif]-->
-  <title>Tommy Danielsson | Man you want but might not need!</title>
+  <title>Tommy Danielsson | Man you want but might not need!!</title>
 </head>
 <body>
   <!-- Section Presentation -->
