updated to swedish

--- a/index.html
+++ b/index.html
@@ -11,39 +11,39 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <html class="ie"><![endif]-->
-  <title>Tommy Danielsson | Man you want but might not need!</title>
+  <title>Tommy Danielsson | Mannen du söker men kanske inte behövs!!</title>
 </head>
 <body>
   <!-- Section Presentation -->
   <section class="presentation" style="background-image: url('img/nerd-profile.jpg')">
       <div class="presentation__content">
-        <h1 class="presentation__content__intro">The man your looking for?</h1>
+        <h1 class="presentation__content__intro">Mannen ni söker?</h1>
       </div>
     <div class="presentation__copy-text">
-      <h5><a href="http://resultify.se">Picture is from my old work (IQQ)</a></h5>
+      <h5><a href="http://resultify.se">Bild från gamla jobb (IQQ)</a></h5>
     </div>
   </section>
   <!-- Section Story -->
   <section id="story" class="story">
-    <h2 class="headline">Story time</h2>
+    <h2 class="headline">Om mig</h2>
     <div class="center center-medium center-large">
       <div class="card full no-link">
         <div class="card__top">
           <img src="img/true-profile.jpg" alt="my true form!">
         </div>
         <div class="content">
-          <h3>In the beginning!</h3>
-          <p>There was a fragile developer called <b>Tommy Danielsson</b></p>
-          <p>At the age of 3X, his quest is to find a place of his called a JOB</p>
+          <h3>Hej!</h3>
           <p>
-            He has a lovely relationship with certain CMS called WordPress.
-            And thanks to the relationship, he gain more knowlegde of the code language called <span class="italic">PHP</span>.
+            En utvecklare som är 3Xår gammal.<br />
+            Mina kvalifikationer förutom kärlek till Wordpress är: 
           </p>
-          <ul>The language he can understand today is:
-            <li>HTML5</li>
-            <li>CSS 3</li>
+          <ul>
+            <li>HTML 5</li>
+            <li>CSS 3/SCSS</li>
+            <li>PHP</li>
             <li>jQuery</li>
             <li>MySQL</li>
+            <li>GIT</li>
           </ul>
         </div>
       </div>
@@ -51,111 +51,126 @@
   </section>
   <!-- Section Experience -->
   <section id="experience" class="experience">
-    <h2 class="headline">Experience</h2>
+    <h2 class="headline">Erfarenhet</h2>
     <div class="center-small center-medium center-large col-2">
-      <a id="1" href="http://foocafe.org/malmoe" target="_blank" class="card">
+      <a id="1" href="http://040.se" target="_blank" class="card">
         <div class="card__top">
-          <span class="date">2015 - On going</span><span class="title">Volunteer</span>
-        </div>
-        <div class="content">
-          <h2>FooCafé</h2>
-          <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
-            <span class="link-arrow">&#8883;</span>
-          </p>
-        </div>
-      </a>
-      <a id="2" href="http://www.hackyourfuture.net/" target="_blank" class="card">
-        <div class="card__top">
-          <span class="date">2017 - 2018</span><span class="title">Volunteer</span>
-        </div>
-        <div class="content">
-          <h2>Hack Your Future</h2>
-          <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
-            <span class="link-arrow">&#8883;</span>
-          </p>
-        </div>
-      </a>
-      <a id="3" href="http://040.se" target="_blank" class="card">
-        <div class="card__top">
-          <span class="date">2017 - 2018</span><span class="title">Web developer</span>
+          <span class="date">2017 - 2018</span><span class="title">Webbutvecklare</span>
         </div>
         <div class="content">
           <h2>040.se</h2>
           <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
+              040.se, hade jättekul att lära mig nya idéer hur man arbeterar inom projekt och kod.
+              Där fick jag lära mig hur larvel fungerade och mer djupgående inom jQuery/php.
+              Mitt ansvar var inom: 
+              <ul>
+                <li>
+                  Projekt
+                </li>
+                <li>
+                  Support
+                </li>
+            </ul>
             <span class="link-arrow">&#8883;</span>
           </p>
         </div>
       </a>
-      <a id="4" href="https://www.resultify.se/" target="_blank" class="card">
+      <a id="2" href="https://www.iqq.se/" target="_blank" class="card">
         <div class="card__top">
-          <span class="date">2015 - 2017</span><span class="title">Web developer</span>
+          <span class="date">2015 - 2017</span><span class="title">Webbutvecklare</span>
         </div>
         <div class="content">
-          <h2>IQQ (Today its Resultify)</h2>
+          <h2>IQQ (idag är det Resultify)</h2>
           <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
+            Efter ett halvår fick jag heltid som WordPress utvecklare.
+            Mitt ansvar att ta hand om support för deras kunder och se till hemsidor var iaf en gång i veckan uppdaterad till det senaste och inget skulle gå sönder.
             <span class="link-arrow">&#8883;</span>
           </p>
         </div>
       </a>
-      <a id="5" href="https://www.resultify.se/" target="_blank" class="card">
+      <a id="3" href="https://www.iqq.se/" target="_blank" class="card">
         <div class="card__top">
-          <span class="date">2015 - 2015</span><span class="title">Intern</span>
+          <span class="date">2015 - 2015</span><span class="title">Praktikant</span>
         </div>
         <div class="content">
           <h2>IQQ</h2>
           <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
+            Praktik och chans att få jobb som heltidsarbetare inom WordPress.
+            Fick massor med bra tips och tricks inom WordPress som jag inte visste när jag var mer "hobby utvecklare".
             <span class="link-arrow">&#8883;</span>
           </p>
         </div>
       </a>
-      <div id="6" class="card no-link">
+      <div id="4" class="card no-link">
         <div class="card__top">
-          <span class="date">2013 - 2014</span><span class="title">Web developer</span>
+          <span class="date">2013 - 2014</span><span class="title">Webbutvecklare</span>
         </div>
         <div class="content">
           <h2>Lunbystad</h2>
           <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
+            En från Chillzone frågade mig om jag var intresserad att testa bygga en webbapp för en av deras sponsorer.
+            Byggde en enkät app som skulle visa ut frågor och sedan spara ner vad X människor har svarat på och sedan visa ut statistik i olika sätt.
           </p>
         </div>
       </div>
-      <div id="7" class="card no-link">
+      <div id="5" class="card no-link">
         <div class="card__top">
-          <span class="date">2013 - 2014</span><span class="title">Teacher</span>
+          <span class="date">2013 - 2014</span><span class="title">Lärare</span>
         </div>
         <div class="content">
           <h2>ChillZone</h2>
           <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
+            Arbetsplats via AMS. <br />
+            Fick i uppdrag lära ut WordPress och bygga med ungdomar från ålder 10-15 tillsammans deras nya fritidsgård hemsida som Hisingenskommun har sponsrat med.
           </p>
         </div>
       </div>
     </div>
   </section>
-  <!-- Section Schools -->
-  <section id="schools" class="center center-medium center-large">
-    <h2 class="headline">Schools</h2>
-    <div class="card full no-link">
-      <div class="card__top">
-          <span class="date">2012 - 2012</span><span class="title">Oratory course</span>
+  <section id="volentary-jobs">
+    <h2 class="headline">Volentär arbete</h2>
+    <div class="center center-medium center-large col-2">
+      <a id="1" href="http://www.hackyourfuture.net/" target="_blank" class="card">
+        <div class="card__top">
+          <span class="date">2017 - Påegående</span><span class="title">Lärare/Mentor</span>
         </div>
         <div class="content">
-          <h2>University of Skövde</h2>
+          <h2>Hack Your Future</h2>
           <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
+            Samma översikt som FooCafé fast skillnad är istället för barn/ungdomar är det nu vuxna. <br /> Vi har delat upp kurser och mitt ansvar är att lära ut GIT/Terminal hur det fungerar i verkliga arbetslivet.
+            <span class="link-arrow">&#8883;</span>
+          </p>
+        </div>
+      </a>
+      <a id="2" href="http://foocafe.org/malmoe" target="_blank" class="card">
+        <div class="card__top">
+          <span class="date">2015 - Pågående</span><span class="title">Lärare</span>
+        </div>
+        <div class="content">
+          <h2>FooCafé</h2>
+          <p>
+              Volentär arbete för Malmö Stad.
+              Måndagar och onsdagar arbetar jag från 17:30 - 19:30 (brukar sluta 20:30 för städning och efterprat) med från 2st till 20st ungar i åldern 7år till 17år gamla. Ungarna är där för lära sig programering. <br />
+              Jag har ansvar över nybörjarkursen.
+            <span class="link-arrow">&#8883;</span>
+          </p>
+        </div>
+      </a>
+    </div>
+  </section>
+  <!-- Section Schools -->
+  <section id="schools" class="center center-medium center-large">
+    <h2 class="headline">Utbildningar</h2>
+    <div class="card full no-link">
+      <div class="card__top">
+          <span class="date">2012 - 2012</span><span class="title">Retorik kurs</span>
+        </div>
+        <div class="content">
+          <h2>Skövdes högskola</h2>
+          <p>
+            Retorik, konsten att kunna prata med folk och visa utstrålning.
+            Gick där och fick lära mig att det är inte så lätt att prata med massor med folk i verkligheten. 
+            Kursen gav mig bra lärdom.
           </p>
         </div>
       </div>
@@ -167,8 +182,15 @@
           <div class="content">
             <h2>KYH</h2>
             <p>
-              Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec ullamcorper nulla non metus auctor fringilla.
-              Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur.
+              Här är utbildningen som gav mig intresse för WordPress.
+              Det vi lärde oss här var:
+              <ul>
+                <li>HTML 5</li>
+                <li>PHP/OOPHP</li>
+                <li>Agile tänk</li>
+                <li>API</li>
+                <li>Terminal/Linux</li>
+              </ul>
             </p>
           </div>
         </div>
