Added a calculation on my true age
function for true age

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,12 +14,13 @@
   <html class="ie"><![endif]-->
   <title>Tommy Danielsson | Mannen du söker men kanske inte behövs!!</title>
 </head>
+
 <body>
   <!-- Section Presentation -->
   <section class="presentation" style="background-image: url('img/nerd-profile.jpg')">
-      <div class="presentation__content">
-        <h1 class="presentation__content__intro">Mannen ni söker?</h1>
-      </div>
+    <div class="presentation__content">
+      <h1 class="presentation__content__intro">Mannen ni söker?</h1>
+    </div>
     <div class="presentation__copy-text">
       <h5><a href="http://resultify.se">Bild från gamla jobb (IQQ)</a></h5>
     </div>
@@ -34,8 +36,8 @@
         <div class="content">
           <h3>Hej!</h3>
           <p>
-            En utvecklare som är 3Xår gammal.<br />
-            Mina kvalifikationer förutom kärlek till Wordpress är: 
+            En utvecklare som är <span id="year">X</span> gammal.<br />
+            Mina kvalifikationer förutom kärlek till Wordpress är:
           </p>
           <ul>
             <li>HTML 5</li>
@@ -60,16 +62,16 @@
         <div class="content">
           <h2>040.se</h2>
           <p>
-              040.se, hade jättekul att lära mig nya idéer hur man arbeterar inom projekt och kod.
-              Där fick jag lära mig hur larvel fungerade och mer djupgående inom jQuery/php.
-              Mitt ansvar var inom: 
-              <ul>
-                <li>
-                  Projekt
-                </li>
-                <li>
-                  Support
-                </li>
+            040.se, hade jättekul att lära mig nya idéer hur man arbeterar inom projekt och kod.
+            Där fick jag lära mig hur larvel fungerade och mer djupgående inom jQuery/php.
+            Mitt ansvar var inom:
+            <ul>
+              <li>
+                Projekt
+              </li>
+              <li>
+                Support
+              </li>
             </ul>
             <span class="link-arrow">&#8883;</span>
           </p>
@@ -83,7 +85,8 @@
           <h2>IQQ (idag är det Resultify)</h2>
           <p>
             Efter ett halvår fick jag heltid som WordPress utvecklare.
-            Mitt ansvar att ta hand om support för deras kunder och se till hemsidor var iaf en gång i veckan uppdaterad till det senaste och inget skulle gå sönder.
+            Mitt ansvar att ta hand om support för deras kunder och se till hemsidor var iaf en gång i veckan
+            uppdaterad till det senaste och inget skulle gå sönder.
             <span class="link-arrow">&#8883;</span>
           </p>
         </div>
@@ -109,7 +112,8 @@
           <h2>Lunbystad</h2>
           <p>
             En från Chillzone frågade mig om jag var intresserad att testa bygga en webbapp för en av deras sponsorer.
-            Byggde en enkät app som skulle visa ut frågor och sedan spara ner vad X människor har svarat på och sedan visa ut statistik i olika sätt.
+            Byggde en enkät app som skulle visa ut frågor och sedan spara ner vad X människor har svarat på och sedan
+            visa ut statistik i olika sätt.
           </p>
         </div>
       </div>
@@ -121,7 +125,8 @@
           <h2>ChillZone</h2>
           <p>
             Arbetsplats via AMS. <br />
-            Fick i uppdrag lära ut WordPress och bygga med ungdomar från ålder 10-15 tillsammans deras nya fritidsgård hemsida som Hisingenskommun har sponsrat med.
+            Fick i uppdrag lära ut WordPress och bygga med ungdomar från ålder 10-15 tillsammans deras nya fritidsgård
+            hemsida som Hisingenskommun har sponsrat med.
           </p>
         </div>
       </div>
@@ -137,7 +142,8 @@
         <div class="content">
           <h2>Hack Your Future</h2>
           <p>
-            Samma översikt som FooCafé fast skillnad är istället för barn/ungdomar är det nu vuxna. <br /> Vi har delat upp kurser och mitt ansvar är att lära ut GIT/Terminal hur det fungerar i verkliga arbetslivet.
+            Samma översikt som FooCafé fast skillnad är istället för barn/ungdomar är det nu vuxna. <br /> Vi har delat
+            upp kurser och mitt ansvar är att lära ut GIT/Terminal hur det fungerar i verkliga arbetslivet.
             <span class="link-arrow">&#8883;</span>
           </p>
         </div>
@@ -149,9 +155,10 @@
         <div class="content">
           <h2>FooCafé</h2>
           <p>
-              Volentär arbete för Malmö Stad.
-              Måndagar och onsdagar arbetar jag från 17:30 - 19:30 (brukar sluta 20:30 för städning och efterprat) med från 2st till 20st ungar i åldern 7år till 17år gamla. Ungarna är där för lära sig programering. <br />
-              Jag har ansvar över nybörjarkursen.
+            Volentär arbete för Malmö Stad.
+            Måndagar och onsdagar arbetar jag från 17:30 - 19:30 (brukar sluta 20:30 för städning och efterprat) med
+            från 2st till 20st ungar i åldern 7år till 17år gamla. Ungarna är där för lära sig programering. <br />
+            Jag har ansvar över nybörjarkursen.
             <span class="link-arrow">&#8883;</span>
           </p>
         </div>
@@ -163,41 +170,42 @@
     <h2 class="headline">Utbildningar</h2>
     <div class="card full no-link">
       <div class="card__top">
-          <span class="date">2012 - 2012</span><span class="title">Retorik kurs</span>
-        </div>
-        <div class="content">
-          <h2>Skövdes högskola</h2>
-          <p>
-            Retorik, konsten att kunna prata med folk och visa utstrålning.
-            Gick där och fick lära mig att det är inte så lätt att prata med massor med folk i verkligheten. 
-            Kursen gav mig bra lärdom.
-          </p>
-        </div>
+        <span class="date">2012 - 2012</span><span class="title">Retorik kurs</span>
+      </div>
+      <div class="content">
+        <h2>Skövdes högskola</h2>
+        <p>
+          Retorik, konsten att kunna prata med folk och visa utstrålning.
+          Gick där och fick lära mig att det är inte så lätt att prata med massor med folk i verkligheten.
+          Kursen gav mig bra lärdom.
+        </p>
       </div>
     </div>
+    </div>
     <div class="card full no-link">
-        <div class="card__top">
-            <span class="date">2010 - 2012</span><span class="title">Agile web developer</span>
-          </div>
-          <div class="content">
-            <h2>KYH</h2>
-            <p>
-              Här är utbildningen som gav mig intresse för WordPress.
-              Det vi lärde oss här var:
-              <ul>
-                <li>HTML 5</li>
-                <li>PHP/OOPHP</li>
-                <li>Agile tänk</li>
-                <li>API</li>
-                <li>Terminal/Linux</li>
-              </ul>
-            </p>
-          </div>
-        </div>
+      <div class="card__top">
+        <span class="date">2010 - 2012</span><span class="title">Agile web developer</span>
       </div>
+      <div class="content">
+        <h2>KYH</h2>
+        <p>
+          Här är utbildningen som gav mig intresse för WordPress.
+          Det vi lärde oss här var:
+          <ul>
+            <li>HTML 5</li>
+            <li>PHP/OOPHP</li>
+            <li>Agile tänk</li>
+            <li>API</li>
+            <li>Terminal/Linux</li>
+          </ul>
+        </p>
+      </div>
+    </div>
+    </div>
   </section>
   <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
 
 </body>
+
 </html>
